--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Mohit Mehta</title>
-        <link rel="stylesheet" href="C:\Users\Mohit Mehta\OneDrive\Documents\CSS-My Site\css\styles.css">
+        <link rel="stylesheet" href="styles.css">
         <link rel="icon" href="C:\Users\Mohit Mehta\OneDrive\Documents\CSS-My Site\favicon.ico">
     </head>
     <body>
