--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="middle-container">
             <div class="profile">
-            <img src="C:\Users\Mohit Mehta\OneDrive\Documents\CSS-My Site\mohit2.png" alt="">
+            <img src="mohit2.png" alt="">
             <h2>Hello.</h2>
             <p class="intro">I'm an aspiring Software Engineer who loves to code</p>
             <p class="intro"> and solve problems and gets excited when find something challenging.</p>
