--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <div class="top-container">
-            <img class="top-cloud" src="C:\Users\Mohit Mehta\OneDrive\Documents\CSS-My Site\images\cloud.png" alt="cloud-img">
+            <img class="top-cloud" src="cloud.png" alt="cloud-img">
             <h1>I'm Mohit Mehta</h1>
             <h2>a <span class="pro">pro</span>grammer</h2>
-            <img class="bottom-cloud" src="C:\Users\Mohit Mehta\OneDrive\Documents\CSS-My Site\images\cloud.png" alt="cloud-img">
+            <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
             <img src="C:\Users\Mohit Mehta\OneDrive\Documents\CSS-My Site\images\mountain.png" alt="mountain-img">
         </div>
 
