--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
         <div class="middle-container">
             <div class="profile">
-            <img src="mohit2.png" alt="">
+            <img src="mohit3.png" alt="">
             <h2>Hello.</h2>
-            <p class="intro">I'm an aspiring Software Engineer who loves to code</p>
+            <p class="intro">I'm a self-motivated Software Engineering aspirant who loves to code</p>
             <p class="intro"> and solve problems and gets excited when find something challenging.</p>
             <p class="intro-1">I ❤love coffee and brew my own beers.</p>
             </div>
