--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
                 <h3>Computer Networks</h3>
                 <p class="desc">It is really important for a developer to know the mechanism which leads the internet and other source of sharing and communication.</p>
             </div>
+                
+                <div class="skill-row">
+                <img class="Bootstrap" src="https://cdn-icons-png.flaticon.com/512/5968/5968672.png" alt="">
+                <h3>Bootstrap</h3>
+                <p class="desc">Knowing about the Bootstrap library provide an ease to software developers to have a much more realistic and attractive user interfaces.</p>
+            </div>
 
 
 
